--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,11 @@
 		<servlet-class>org.pseudorandom.unicode.DetailsService</servlet-class>
 	</servlet>
 
+	<servlet>
+		<servlet-name>ui</servlet-name>
+		<servlet-class>org.pseudorandom.charmap.CharmapUIServlet</servlet-class>
+	</servlet>
+
 	<servlet-mapping>
 		<servlet-name>search-service</servlet-name>
 		<url-pattern>/search</url-pattern>
@@ -23,6 +28,11 @@
 	<servlet-mapping>
 		<servlet-name>details-service</servlet-name>
 		<url-pattern>/details</url-pattern>
+	</servlet-mapping>
+
+	<servlet-mapping>
+		<servlet-name>ui</servlet-name>
+		<url-pattern>/ui</url-pattern>
 	</servlet-mapping>
 
 	<welcome-file-list>
