--- a/pom.xml
+++ b/pom.xml
@@ -32,13 +32,20 @@
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
-				<version>7.2.0.RC0</version>
 				<configuration>
 					<webAppConfig>
 						<contextPath>/</contextPath>
 					</webAppConfig>
 					<scanIntervalSeconds>5</scanIntervalSeconds>
 					<requestLog implementation="org.eclipse.jetty.server.NCSARequestLog" />
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>tomcat-maven-plugin</artifactId>
+				<configuration>
+					<path>/</path>
 				</configuration>
 			</plugin>
 
